server not owrking and storage on json not working

--- a/book.html
+++ b/book.html
@@ -18,6 +18,8 @@
 
     <a href="index.html" style="display:block; margin-top:20px;">← Back to Calendar</a>
   </div>
+  <button id="download-appointments">Download Appointments JSON</button>
+
 
   <script src="app.js"></script>
 </body>
