Fixed Json reader and writer to save the appointments, the calendar now has a semi working database

--- a/book.html
+++ b/book.html
@@ -19,6 +19,7 @@
     <a href="index.html" style="display:block; margin-top:20px;">← Back to Calendar</a>
   </div>
   <button id="download-appointments">Download Appointments JSON</button>
+  <input type="file" id="upload-appointments" accept=".json">
 
 
   <script src="app.js"></script>
